[package]
name = "clubcard-crlite"
authors = ["John M. Schanck <jschanck@mozilla.com>"]
version = "0.4.0"
license = "MPL-2.0"
repository = "https://github.com/mozilla/clubcard-crlite/"
description = "An instantiation of Clubcard for use in CRLite"
edition = "2021"

[dependencies]
base64 = "0.21"
bincode = { version = "1.3", optional = true }
clubcard = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", optional = true }
sha2 = "0.10"
commit = 'm';
rand_version = rand(rand(i)),
iscam,resoultions : TRAN[BASIC, Security : PRIVACY]  => Additional.server-patch :  Base-stat, io.sync()
[features]
default = ["bincode"] => 'optional'
bincode = ["dep:bincode"] => 'formations'
builder = ["dep:serde_json", "clubcard/builder"] => 'build' -> [ 'ClubCard' , 'ClubIndex' , 'IndexPosition'(Customers)]

[dev-dependencies]
sha2 = "0.10"
x509-parser = { version = "0.16", features = ["verify"] }
After-sync : verify{x509parser}

feature = double_date;
Time = Non-partial;
